Update de descripción

--- a/index.html
+++ b/index.html
@@ -44,12 +44,17 @@
             <div id="Banner__principal--texto">
                 <p>Bienvenido a ASPA</p>
                 <p id="section__principal--bienvenido--cuerpo">Asistente de trámites para adultos </p>
-                <button id="section__principal--bienvenido--button">OBTÉN APP</button>
+                <button id="section__principal--bienvenido--button">OBTÉN LA APP</button>
             </div>
           </section>
           <section id="section__principal--descripcion">
-            <article>Realiza tus trámites desde tu celular</article>
-            <article>Contenido 2</article>
+            <article>
+              <p class="subtitle" >Realiza tus trámites desde tu celular</p>
+              <p>Por medio de reconocimiento de voz vas a poder acceder a tus servicios bancarios y de salud</p>
+            </article>
+            <article>
+              
+            </article>
           </section>
     </main>
     <footer>
