--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@
             </div>
           </section>
           <section id="section__principal--descripcion">
-            <article>
+            <article id="section__principal--descripcion--texto">
               <p class="subtitle" >Realiza tus trámites desde tu celular</p>
-              <p>Por medio de reconocimiento de voz vas a poder acceder a tus servicios bancarios y de salud</p>
+              <p>Sumérgete en la tecnología a tu manera</p>
+              <p >Por medio de reconocimiento de voz o texto, vas a poder acceder a tus servicios bancarios, de salud y los que se ajusten a tus necesidades, aquí lo pensanmos todo para todos.</p>
             </article>
             <article>
-              
+              <img id="section__principal--descripcion--imagen" src="./Assets/Dino.png" alt="">
             </article>
           </section>
     </main>
