Actualización cambios de Daniela

--- a/beneficios.html
+++ b/beneficios.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="style/style.css">
-    <title>Precios - ASPA</title>
+    <title>Beneficios - ASPA</title>
 </head>
 
 <body>
@@ -38,14 +38,13 @@
                             <a class="nav-link menu" href="./nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link menu" href="./contactanos.html">Contáctanos</a>
+                            <a class="nav-link menu" href="./formulario.html">Contáctanos</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </main>
-
 </body>
 
 </html>
