--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
+                    <a class="nav-link menu" href="./beneficios.html">Beneficios</a>
+                </li>
+                  <li class="nav-item">
                     <a class="nav-link menu" href="./caracteristicas.html">Características</a>
                   </li>
                   <li class="nav-item ">
