--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="shortcut icon" href="./Assets/Isotipo.png" type="image/x-icon">
-    <link rel="shortcut icon" href="./assets/logo-mobile.svg" type="image/x-icon">
     <link rel="stylesheet" href="style/style.css">
     <title>Bienvenido - ASPA</title>
 </head>
@@ -17,7 +16,7 @@
     <main>
         <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
             <div class="container-fluid">
-              <a id="a__navbar-brand--Inicio" class="navbar-brand" href="#">Inicio</a>
+              <a id="a__navbar-brand--Inicio" class="navbar-brand" href="./index.html">Inicio</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
