--- a/nosotros.html
+++ b/nosotros.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Enter your description here" />
+    <link rel="shortcut icon" href="./Assets/Isotipo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="style/style.css">
@@ -19,31 +20,31 @@
     <main>
         <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
             <div class="container-fluid">
-                <a id="a__navbar-brand--Inicio" class="navbar-brand" href="./index.html">Inicio</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <a id="a__navbar-brand--Inicio" class="navbar-brand" href="./index.html">Inicio</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link menu" href="./beneficios.html">Beneficios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link menu" href="./caracteristicas.html">Características</a>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link menu" href="./precios.html">Precios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link menu" href="./nosotros.html">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link menu" href="./contactanos.html">Contáctanos</a>
-                        </li>
-                    </ul>
-                </div>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link menu" href="./beneficios.html">Beneficios</a>
+                </li>
+                  <li class="nav-item">
+                    <a class="nav-link menu" href="./caracteristicas.html">Características</a>
+                  </li>
+                  <li class="nav-item ">
+                    <a class="nav-link menu" href="./precios.html">Precios</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link menu" href="./nosotros.html">Nosotros</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link menu" href="./contactanos.html">Contáctanos</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-        </nav>
+          </nav>
     </main>
 
 </body>
