--- a/nosotros.html
+++ b/nosotros.html
@@ -17,7 +17,7 @@
     <header>
         <img src="./Assets/Logo.png" id="logo" alt="">
     </header>
-    <main>
+    <main id="nosotros__main">
         <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
             <div class="container-fluid">
               <a id="a__navbar-brand--Inicio" class="navbar-brand" href="./index.html">Inicio</a>
@@ -45,6 +45,29 @@
               </div>
             </div>
           </nav>
+          <section id="nosotros">
+              <div class="nosotros__card">
+                  <img class="nosotros__foto" src="./Assets/Valentina.jpg" alt="">
+                  <p class="nosotros__nombres">Valentina Villada Rendón</p>
+                  <p class="nosotros__cargo">Developer</p>
+              </div>
+              <div class="nosotros__card">
+                  <img  class="nosotros__foto" src="./Assets/Daniela.jpeg" alt="">
+                  <p class="nosotros__nombres">Daniela Gonzalez</p>
+                  <p class="nosotros__cargo">QA</p>
+              </div>
+              <div class="nosotros__card">
+                  <img  class="nosotros__foto" src="./Assets/Paula.jpeg" alt="">
+                  <p class="nosotros__nombres">Paula Jaramillo</p>
+                  <p class="nosotros__cargo">Scrum</p>
+              </div>
+              <div class="nosotros__card">
+                  <img  class="nosotros__foto" src="./Assets/Andrea.jpeg" alt="">
+                  <p class="nosotros__nombres">Andrea Londoño</p>
+                  <p class="nosotros__cargo">Designer</p>
+              </div>
+
+          </section>
     </main>
 
 </body>
