Actualización de nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -45,7 +45,10 @@
               </div>
             </div>
           </nav>
-          <section id="nosotros">
+          <section id="nosotros__intro">
+              <p>Nuestro equipo de trabajo</p>
+          </section>
+          <section id="nosotros__equipo">
               <div class="nosotros__card">
                   <img class="nosotros__foto" src="./Assets/Valentina.jpg" alt="">
                   <p class="nosotros__nombres">Valentina Villada Rendón</p>
@@ -66,7 +69,6 @@
                   <p class="nosotros__nombres">Andrea Londoño</p>
                   <p class="nosotros__cargo">Designer</p>
               </div>
-
           </section>
     </main>
 
